--- a/client/src/components/Join/Join.css
+++ b/client/src/components/Join/Join.css
@@ -18,36 +18,73 @@ html, body {
   text-align: center;
   height: 100vh;
   align-items: center;
-  background-color: #1A1A1D;
+  background-color: #232323
 }
 
 .joinInnerContainer {
-  width: 20%;
+  /* width: 20%; */
+  color: #eee;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 550px;
+  width: 450px;
+  border-radius: .5rem;
+  background-color: #2c2c2c;
+  box-shadow: 1px 2px 10px #111;
+}
+
+.joinInnerContainer > div {
+  width: 70%;
 }
 
 .joinInput {
-  border-radius: 0;
-  padding: 15px 20px;
+  -webkit-font-smoothing: antialiased;
+  padding: 0;
+  margin: 0;
+  background-color: #232323;
   width: 100%;
+  height: 50px;
+  margin-top: 15px;
+  border-radius: .3rem;
+  outline: none;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #ddd;
+  letter-spacing: .08rem;
+  border: 1px solid #232323;
 }
-
+.joinInput:focus,
+.joinInput:hover{
+  border: 1px solid #03a9f4;
+}
 .heading {
-  color: white;
+  color: #03a9f4;
   font-size: 2.5em;
-  padding-bottom: 10px;
-  border-bottom: 2px solid white;
+  padding-bottom: 50px;
+  cursor: default;
 }
 
 .button {
-    color: #fff !important;
-    text-transform: uppercase;
-    text-decoration: none;
-    background: #2979FF;
-    padding: 20px;
-    border-radius: 5px;
-    display: inline-block;
-    border: none;
-    width: 100%;
+    -webkit-font-smoothing: antialiased;
+  margin: 0;
+  background-color: #03a9f4;
+  outline: none;
+  border: none;
+  padding: 10px 20px;
+  border-radius: .2rem;
+  letter-spacing: .05rem;
+  color: #111;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.button:hover {
+  background-color: #007ac1;
+  color: #eee;
 }
 
 .mt-20 {
