--- a/client/src/components/Messages/Message/Message.css
+++ b/client/src/components/Messages/Message/Message.css
@@ -1,10 +1,11 @@
 .messageBox {
   background: #F3F3F3;
-  border-radius: 20px;
-  padding: 5px 20px;
+  padding: 0px 20px;
   color: white;
   display: inline-block;
   max-width: 80%;
+  border-radius: 0.3rem;
+  margin: 5px 0px;
 }
 
 .messageText {
@@ -30,7 +31,7 @@
   display: flex;
   align-items: center;
   font-family: Helvetica;
-  color: #828282;
+  color: #ddd;
   letter-spacing: 0.3px;
 }
 
@@ -52,16 +53,18 @@
 
 .colorWhite {
   color: white;
+  letter-spacing: 0.05rem;
 }
 
 .colorDark {
-  color: #353535;
+  color: #eee;
+  letter-spacing: 0.05rem;
 }
 
 .backgroundBlue {
-  background: #2979FF;
+  background: #03a9f4;
 }
 
 .backgroundLight {
-  background: #F3F3F3;
+  background: #232323;
 }
