--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #2979FF;
+  background: #111;
   border-radius: 4px 4px 0 0;
   height: 60px;
   width: 100%;
+  border-bottom: 1px solid #039af4;
 }
 
 .leftInnerContainer {
@@ -13,7 +14,8 @@
   display: flex;
   align-items: center;
   margin-left: 5%;
-  color: white;
+  color: #03a9f4;
+  cursor: default;
 }
 
 .rightInnerContainer {
