--- a/client/src/components/TextContainer/TextContainer.css
+++ b/client/src/components/TextContainer/TextContainer.css
@@ -1,16 +1,18 @@
 .textContainer {
   display: flex;
   flex-direction: column;
-  margin-left: 100px;
-  color: white;
-  height: 60%;
+  margin-left: 50px;
+  color: #eee;
+  height: 100%;
   justify-content: space-between;
+  min-width: 300px;
 }
 
 .activeContainer {
   display: flex;
   align-items: center;
   margin-bottom: 50%;
+  padding-left: 15px;
 }
 
 .activeItem {
